--- a/views/login 3.ejs
+++ b/views/login 3.ejs
@@ -1,25 +1,28 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <script defer src="/__/firebase/5.3.1/firebase-app.js"></script>
     <script defer src="/__/firebase/5.3.1/firebase-auth.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css"
+    />
     <script defer src="/__/firebase/init.js"></script>
   </head>
 
   <body>
+    <div id="auth"></div>
     <p>ログインしてください</p>
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
 
-<!-- 以下のコードで login 3.ejs ファイルの中だけで新規登録・ログインをすることはできる。 -->
-<!-- これを app.js ファイルとも連携して、全てのページでユーザーごとに処理をわけられるようにしたい。 -->
-
+    <!-- 以下のコードで login 3.ejs ファイルの中だけで新規登録・ログインをすることはできる。 -->
+    <!-- これを app.js ファイルとも連携して、全てのページでユーザーごとに処理をわけられるようにしたい。 -->
     <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
-      
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyAxetUkclvXWGL9ZvYKoGfnxWbtAmYcHg0",
@@ -32,25 +35,30 @@
     </script>
 
     <script type="text/javascript">
-            var ui = new firebaseui.auth.AuthUI(firebase.auth());
+      var ui = new firebaseui.auth.AuthUI(firebase.auth());
 
-            var uiConfig = {
-              callbacks: {
-                signInSuccessWithAuthResult: function(authResult, redirectUrl) {
-                  return true;
-                },
-                uiShown: function() {
-                  document.getElementById('loader').style.display = 'none';
-                }
-              },
-              signInFlow: 'popup',
-              signInSuccessUrl: '/',
-              signInOptions: [
-                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-                firebase.auth.EmailAuthProvider.PROVIDER_ID,
-              ],
-            };
-            ui.start('#firebaseui-auth-container', uiConfig);
+      var uiConfig = {
+        callbacks: {
+          signInSuccessWithAuthResult: function (authResult, redirectUrl) {
+            axios.post("/login", {
+              email: authResult.user.email,
+              name: authResult.user.displayName,
+              id: authResult.user.uid,
+            });
+            return true;
+          },
+          uiShown: function () {
+            document.getElementById("loader").style.display = "none";
+          },
+        },
+        signInFlow: "popup",
+        signInSuccessUrl: "/",
+        signInOptions: [
+          firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+          firebase.auth.EmailAuthProvider.PROVIDER_ID,
+        ],
+      };
+      ui.start("#firebaseui-auth-container", uiConfig);
     </script>
   </body>
 </html>
