--- a/views/prof.ejs
+++ b/views/prof.ejs
@@ -110,7 +110,7 @@
                   <img src="../images/profile.png" width="300" height="300">
               </div>
 
-              <h2 class="heading-lv2 heading-margin text-center" id="prof-name">RYOTA YAMAOKA</h2>
+              <h2 class="heading-lv2 heading-margin text-center" id="prof-name"><%= locals.username %></h2>
               <p class="text text-center">高校1年生です。</p>
 
               <h3 class="heading-lv3 heading-margin text-center">自己紹介</h3>
