--- a/views/top.ejs
+++ b/views/top.ejs
@@ -41,7 +41,7 @@
         <%  if(locals.isLoggedIn){ %>
                 <li><p>ようこそ、<%= locals.username %>さん</p></li>
                 <!-- ログインしたユーザーごとにアカウントを分ける -->
-                <li><a href="#">プロフィール</a></li>
+                <li><a href="/prof">プロフィール</a></li>
                 <li><a href="#">アカウント設定</a></li>
                 <!-- <li><a href="/logout" class = "btn login">ログアウト</a></li> -->
                 <li><a href="/logout">ログアウト</a></li>
