--- a/views/upload-works.ejs
+++ b/views/upload-works.ejs
@@ -9,11 +9,14 @@
     rel="stylesheet"
     href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css"
   />
-  <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase-storage.js"></script>
  </head>
  <body>
   <input type="file" id="file" />
   <button id="upload" type="button">アップロード</button>
+  <button id="delete" type="button">削除</button>
+  <button type="button" onclick="ref.getDownloadURL()">表示</button>
   <script>
     const config = {
       apiKey: "<%= locals.apiKey %>",
@@ -25,13 +28,15 @@
     firebase.initializeApp(config);
   </script>
   <script>
-  
+    // Get a reference to the storage service, which is used to create references in your storage bucket
+    const storage = firebase.storage();
+
     document.getElementById('upload').addEventListener('click', function() {
       files = document.getElementById('file').files;
       image = files[0];
   
       if(files[0].type.indexOf('image') >= 0) {
-        ref = firebase.storage().ref().child(image.name);
+        ref = storage.ref().child(image.name);
         ref.put(image).then(function(snapshot) {
           ref.getDownloadURL().then(function(url){
             alert('画像をアップロードしました！');
@@ -48,6 +53,56 @@
         alert('画像を削除しました！');
       });
     });
+    // // Create the file metadata
+    // /** @type {any} */
+    // const metadata = {
+    //   contentType: 'image/jpeg'
+    // };
+
+    // // Upload file and metadata to the object 'images/mountains.jpg'
+    // const storageRef = ref(storage, 'images/' + file.name);
+    // const uploadTask = uploadBytesResumable(storageRef, file, metadata);
+
+    // // Listen for state changes, errors, and completion of the upload.
+    // uploadTask.on('state_changed',
+    //   (snapshot) => {
+    //     // Get task progress, including the number of bytes uploaded and the total number of bytes to be uploaded
+    //     const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+    //     console.log('Upload is ' + progress + '% done');
+    //     switch (snapshot.state) {
+    //       case 'paused':
+    //         console.log('Upload is paused');
+    //         break;
+    //       case 'running':
+    //         console.log('Upload is running');
+    //         break;
+    //     }
+    //   },
+    //   (error) => {
+    //     // A full list of error codes is available at
+    //     // https://firebase.google.com/docs/storage/web/handle-errors
+    //     switch (error.code) {
+    //       case 'storage/unauthorized':
+    //         // User doesn't have permission to access the object
+    //         break;
+    //       case 'storage/canceled':
+    //         // User canceled the upload
+    //         break;
+
+    //       // ...
+
+    //       case 'storage/unknown':
+    //         // Unknown error occurred, inspect error.serverResponse
+    //         break;
+    //     }
+    //   },
+    //   () => {
+    //     // Upload completed successfully, now we can get the download URL
+    //     getDownloadURL(uploadTask.snapshot.ref).then((downloadURL) => {
+    //       console.log('File available at', downloadURL);
+    //     });
+    //   }
+    // );
   
   </script>
  </body>
