--- a/views/all-theme.ejs
+++ b/views/all-theme.ejs
@@ -56,7 +56,7 @@
   <div class="see-action btn">
     <a href="love-know" class="see-action-icon">
       <img src="https://img.icons8.com/bubbles/500/000000/like.png"/>
-      <p>愛</p>
+      <p>美術館</p>
     </a>
   </div>
   <div class="see-action btn">
