--- a/views/painting-know.ejs
+++ b/views/painting-know.ejs
@@ -75,7 +75,7 @@
             </div>
             <%- include("all-theme"); %>
             <div class="">
-              <a href="#" class="js-modal-open" data-target="modal02"><p>体験の追加リクエスト</p></a>
+              <a href="#" class="js-modal-open" data-target="modal02"><p>体験の追加</p></a>
             </div>
             <div id="modal02" class="modal js-modal">
               <div class="modal-bg js-modal-close">
@@ -87,7 +87,7 @@
                 　</div>
                   <div class="modal-body">
                     <div class="lisence">
-                      <h3>当てはまる体験がない時は、追加をリクエストしてみよう。</h3>
+                      <h3>当てはまる体験がない時は、自分でつくってみよう。</h3>
                       <p>例を参考に入力してみよう。</p>
                       <div>
 	                       <input type="text" id="bms_send_message" placeholder="例 レストランでの食事">
