--- a/views/prof.ejs
+++ b/views/prof.ejs
@@ -92,6 +92,10 @@
           left: 0;
           object-fit: cover;
         }
+        
+        .certificate{
+          border: 1px solid black;
+        }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
@@ -115,7 +119,7 @@
 
               <h3 class="heading-lv3 heading-margin text-center">自己紹介</h3>
               <p class="text text-center">好きなアーティストは女王蜂です。<br>ヒトに寄り添える曲、その他作品を作りたいです。<br>ぜひ鑑賞してください！</p>
-              <p>利用可能ポイント：500p <a href="#" class="js-modal-open" data-target="modal00">ポイントを貯めるには</a></p>
+              <p>利用可能ポイント：500p <a href="#" class="js-modal-open" data-target="modal00">ポイントを貯めるには</a><a href="#" class="js-modal-open" data-target="modal000">証明書を発行</a></p>
 
               <div id="modal00" class="modal js-modal">
                 <div class="modal-bg js-modal-close">
@@ -152,6 +156,23 @@
                         <h3>STEP3：ポイントGET</h3>
                         <p>完了すると表現方法に応じてポイントが貯まります。</p>
                         <img src="https://as1.ftcdn.net/v2/jpg/02/56/44/90/1000_F_256449077_0fEFJcg2Pr5PN6eU4UF5gHoqtISN26zs.jpg" height="200">
+                      </div>
+                  　</div>
+                </div>
+              </div>
+
+              <div id="modal000" class="modal js-modal">
+                <div class="modal-bg js-modal-close">
+                </div>
+                <div class="modal-contents">
+                  <div class="modal-header">
+                  　　<h1>tocreをクリエイティビティの実績にしよう</h1>
+                　　　<span class="js-modal-close cross">×</span>
+                  　</div>
+                    <div class="modal-body">
+                      <div class="lisence">
+                        <h1>サーティフィケートのイメージ</h1>
+                        <img class = "certificate" src="../images/tocre証明書.png" height="800">
                       </div>
                   　</div>
                 </div>
