--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -14,8 +14,18 @@
     <div>
       <!-- form タグを使って/upload にファイルデータをPOSTする -->
       <form action="/upload" method="post" enctype="multipart/form-data">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required />
+        <br />
+
+        <label for="explanation">Explanation:</label>
+        <input type="text" id="explanation" name="explanation" required />
+        <br />
+        <label for="inspiration">Inspiration:</label>
+        <input type="text" id="inspiration" name="inspiration" required />
+        <br />
         <div>
-          <input type="file" name="file" />
+          <input type="file" name="file" required />
         </div>
         <div>
           <input type="submit" value="送信する" />
